--- a/arch/arm64/configs/msm8953-6.3.0_gen.config
+++ b/arch/arm64/configs/msm8953-6.3.0_gen.config
@@ -30,7 +30,7 @@ CONFIG_LOCALVERSION="-sridhar-qcom-msm8953"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME="dvstronics"
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_SYSVIPC_COMPAT=y
@@ -718,11 +718,10 @@ CONFIG_MODULE_UNLOAD=y
 # CONFIG_MODVERSIONS is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_COMPRESS_NONE is not set
-CONFIG_MODULE_COMPRESS_GZIP=y
+CONFIG_MODULE_COMPRESS_NONE=y
+# CONFIG_MODULE_COMPRESS_GZIP is not set
 # CONFIG_MODULE_COMPRESS_XZ is not set
 # CONFIG_MODULE_COMPRESS_ZSTD is not set
-# CONFIG_MODULE_DECOMPRESS is not set
 # CONFIG_MODULE_ALLOW_MISSING_NAMESPACE_IMPORTS is not set
 CONFIG_MODPROBE_PATH="/sbin/modprobe"
 CONFIG_MODULES_TREE_LOOKUP=y
@@ -1483,34 +1482,7 @@ CONFIG_NET_9P_VIRTIO=y
 # CONFIG_NET_9P_DEBUG is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
-CONFIG_NFC=m
-# CONFIG_NFC_DIGITAL is not set
-CONFIG_NFC_NCI=m
-# CONFIG_NFC_NCI_UART is not set
-CONFIG_NFC_HCI=m
-CONFIG_NFC_SHDLC=y
-
-#
-# Near Field Communication (NFC) devices
-#
-# CONFIG_NFC_VIRTUAL_NCI is not set
-# CONFIG_NFC_FDP is not set
-CONFIG_NFC_PN544=m
-CONFIG_NFC_PN544_I2C=m
-# CONFIG_NFC_PN533_USB is not set
-# CONFIG_NFC_PN533_I2C is not set
-# CONFIG_NFC_PN532_UART is not set
-# CONFIG_NFC_MICROREAD_I2C is not set
-# CONFIG_NFC_MRVL_USB is not set
-# CONFIG_NFC_ST21NFCA_I2C is not set
-# CONFIG_NFC_ST_NCI_I2C is not set
-CONFIG_NFC_NXP_NCI=m
-CONFIG_NFC_NXP_NCI_I2C=m
-CONFIG_NFC_S3FWRN5=m
-CONFIG_NFC_S3FWRN5_I2C=m
-# CONFIG_NFC_S3FWRN82_UART is not set
-# end of Near Field Communication (NFC) devices
-
+# CONFIG_NFC is not set
 # CONFIG_PSAMPLE is not set
 # CONFIG_NET_IFE is not set
 # CONFIG_LWTUNNEL is not set
@@ -1547,8 +1519,11 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 # Firmware loader
 #
 CONFIG_FW_LOADER=y
+CONFIG_FW_LOADER_PAGED_BUF=y
+CONFIG_FW_LOADER_SYSFS=y
 CONFIG_EXTRA_FIRMWARE=""
-# CONFIG_FW_LOADER_USER_HELPER is not set
+CONFIG_FW_LOADER_USER_HELPER=y
+# CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_COMPRESS is not set
 CONFIG_FW_CACHE=y
 # CONFIG_FW_UPLOAD is not set
@@ -2042,6 +2017,7 @@ CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH10K is not set
 CONFIG_WCN36XX=m
 CONFIG_WCN36XX_DEBUGFS=y
+CONFIG_WCN36XX_SNAPDRAGON_HACKS=y
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 # CONFIG_WLAN_VENDOR_BROADCOM is not set
 # CONFIG_WLAN_VENDOR_CISCO is not set
@@ -3326,7 +3302,7 @@ CONFIG_DRM_PANEL_MSM8953_GENERATED=m
 # CONFIG_DRM_PANEL_MDSS_ILI7807_FHDPLUS is not set
 # CONFIG_DRM_PANEL_MDSS_NT35596_EBBG is not set
 CONFIG_DRM_PANEL_MDSS_OTM1911_FHD=m
-# CONFIG_DRM_PANEL_MDSS_R63350 is not setchennai-fm-rainbow
+# CONFIG_DRM_PANEL_MDSS_R63350 is not set
 # CONFIG_DRM_PANEL_OFILM_622_V0 is not set
 # CONFIG_DRM_PANEL_TENOR_HX8399C_AUO is not set
 # CONFIG_DRM_PANEL_TENOR_ILI7807D_DJN_AUO is not set
@@ -3339,7 +3315,7 @@ CONFIG_DRM_PANEL_MDSS_OTM1911_FHD=m
 # CONFIG_DRM_PANEL_XIAOMI_NT35532 is not set
 # CONFIG_DRM_PANEL_XIAOMI_NT36672_CSOT_FHDPLUS_E7 is not set
 # CONFIG_DRM_PANEL_XIAOMI_NT36672_TIANMA_FHDPLUS_E7 is not set
-CONFIG_DRM_PANEL_XIAOMI_OTM1911=m
+# CONFIG_DRM_PANEL_XIAOMI_OTM1911 is not set
 # CONFIG_DRM_PANEL_XIAOMI_TD4310_EBBG_FHDPLUS_E7 is not set
 # CONFIG_DRM_PANEL_XIAOMI_TD4310_FHDPLUS_E7_G55 is not set
 # CONFIG_DRM_PANEL_XIAOMI_TD4310_FHDPLUS_E7 is not set
